--- a/practice/001-structure/douban_structure/douban.html
+++ b/practice/001-structure/douban_structure/douban.html
@@ -1,39 +1,39 @@
-<div class="row head">
-    <div class="row navbar global">
-        <div class="col left">
-            <div class="row link-group"></div>
-            <div class="row link-group"></div>
+<div class="row head 头">
+    <div class="row navbar global 导航栏 全站">
+        <div class="col left 左">
+            <div class="row link-group 链接组"></div>
+            <div class="row link-group 链接组"></div>
         </div>
-        <div class="col right"></div>
+        <div class="col right 右"></div>
     </div>
 </div>
-<div class="row main">
-    <div class="row navbar page">
-        <div class="col link-group"></div>
-        <div class="col search-bar"></div>
+<div class="row main 体">
+    <div class="row navbar page 导航栏 单页">
+        <div class="col link-group 链接组"></div>
+        <div class="col search-bar 搜索栏"></div>
     </div>
-    <div class="row main content">
-        <div class="row title left"></div>
+    <div class="row main content 主 内容">
+        <div class="row title left 标题 左"></div>
         <div class="row">
-            <div class="col card-group">
-                <div class="row card">
-                    <div class="col card head"></div>
-                    <div class="col card content">
-                        <div class="row title"></div>
-                        <div class="row content"></div>
-                        <div class="row other"></div>
+            <div class="col card-group 卡组">
+                <div class="row card 卡片">
+                    <div class="col card head 卡片 头"></div>
+                    <div class="col card content 卡片 体">
+                        <div class="row title 标题 "></div>
+                        <div class="row content 内容"></div>
+                        <div class="row other 其他"></div>
                     </div>
                 </div>
-                <div class="row btn-group"></div>
+                <div class="row btn-group 按钮组"></div>
             </div>
-            <div class="col Recommend-group ">
+            <div class="col Recommend-group 推荐小组">
                 <div class="row">
-                    <div class="row title"></div>
-                    <div class="row content item">
-                        <div class="col head picture"></div>
-                        <div class="col des">
-                            <div class="row title link-group "></div>
-                            <div class="row other"></div>
+                    <div class="row title 标题"></div>
+                    <div class="row item-massage 一条信息 ">
+                        <div class="col head-picture 头像"></div>
+                        <div class="col des 描述">
+                            <div class="row title-link 标题链接"></div>
+                            <div class="row other 其他"></div>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
         </div>
     </div>
 </div>
-<div class="row footer">
-    <div class="col left text"></div>
-    <div class="col right link-group"></div>
+<div class="row footer 页脚">
+    <div class="col left text 左 文字"></div>
+    <div class="col right link-group 右 链接组"></div>
 </div>
