--- a/practice/001-structure/xiaomi_structure/xiaomi.html
+++ b/practice/001-structure/xiaomi_structure/xiaomi.html
@@ -162,9 +162,9 @@
     <div class="row source massage 源信息">
         <div class="col logo"></div>
         <div class="col">
-            <div class="row link-group"></div>
-            <div class="row text"></div>
+            <div class="row link-group 链接组"></div>
+            <div class="row text 文字"></div>
         </div>
-        <div class="col picture-link-group"></div>
+        <div class="col picture-link-group 图片链接组"></div>
     </div>
 </div>
